# sparqling-genomics

./: .gitignore  Makefile.am  README.md  configure.ac  env.in  environment.scm  guix.scm  internal-structure.ttl
build-aux/: guile.am
debian/: changelog  control  copyright  rules
deployment/: virtuoso-vm.scm
doc/: Makefile.am  command-line-tools.tex  implemented-ontologies.tex  information-management.tex  information-retrieval.tex  introduction.tex  knowledge-graph.tex  performance-tuning.tex  programming-with-sparql.tex  references.bib  sparqling-genomics.sty  sparqling-genomics.sty.in  sparqling-genomics.tex  sparqling-svs.tex  umcu.sty  version.tex.in  web-extend.tex  web-interface.tex  web-programming-interface.tex
doc/figures/: layered-knowledge.xbb  logo.xbb  sg-auth-manager-scaleout.xbb  sg-web-dashboard.xbb  sg-web-exploratory.xbb  sg-web-form-example-submit.xbb  sg-web-form-example.xbb  sg-web-import-rdf.xbb  sg-web-project-details.xbb  sg-web-query.xbb
ontologies/: VariantCallFormat.ttl  close-to-home.ttl  internal-structure.ttl  sequence_manipulation_ontology.ttl  sparqling-genomics.ttl  vcf2rdf.ttl
presentations/: UBC-2017-09-04.tex  beamercolorthemeUMCU.sty  beamerthemeUMCU.sty
queries/: querying_variants.sparql  variants.ttl
rpmbuild/: sparqling-genomics-fedora33.spec  sparqling-genomics.spec  sparqling-genomics.spec.in
tools/: Makefile.am  vcf2turtle.c
tools/SVPlot/: DESCRIPTION  NAMESPACE
tools/SVPlot/R/: plot_lengths_for_type_and_chromosome.R  plot_mutation_types.R
tools/SVPlot/man/: plot_coverage_for_type_and_chromosome.Rd  plot_lengths_for_type_and_chromosome.Rd  plot_mutations_per_type.Rd
tools/bam2rdf/: Makefile.am
tools/bam2rdf/include/: ontology.h  runtime_configuration.h
tools/bam2rdf/src/: bam_header.c  bam_reads.c  helper.c  main.c  ontology.c  runtime_configuration.c  ui.c
tools/common/include/: helper.h  master-ontology.h
tools/common/src/: helper.c
tools/ega2rdf/: ega2rdf.in
tools/folder2rdf/: folder2rdf.in
tools/json2rdf/: Makefile.am
tools/json2rdf/include/: json.h  ontology.h  runtime_configuration.h
tools/json2rdf/src/: helper.c  json.c  main.c  ontology.c  runtime_configuration.c  ui.c
tools/json2rdf/tests/: input.json
tools/sgfs/: Makefile.am
tools/sgfs/guile/: Makefile.am
tools/sgfs/guile/sgfs/: cache.scm  filesystem.scm
tools/sgfs/include/: config.h.in
tools/sgfs/src/: sgfs.c  sgfs.c.in
tools/table2rdf/: Makefile.am
tools/table2rdf/include/: helper.h  ontology.h  runtime_configuration.h  table.h  ui.h
tools/table2rdf/src/: helper.c  main.c  ontology.c  runtime_configuration.c  table.c  ui.c
tools/table2rdf/tests/: comments.tsv  sample.tsv
tools/turtle2remote/: Makefile.am
tools/turtle2remote/src/: turtle2remote.c
tools/vcf2rdf/: Makefile.am
tools/vcf2rdf/include/: helper.h  ontology.h  runtime_configuration.h  ui.h  vcf_header.h  vcf_variants.h
tools/vcf2rdf/src/: helper.c  main.c  ontology.c  runtime_configuration.c  ui.c  vcf_header.c  vcf_variants.c
tools/vcf2turtle/: Makefile.am
tools/vcf2turtle/src/: GenomePosition.c  GenomePosition.h  Origin.c  Origin.h  RuntimeConfiguration.h  Sample.c  Sample.h  Variant.c  Variant.h  VcfHeader.c  VcfHeader.h  helper.c  helper.h  main.c  ui.c  ui.h  vcf2turtle.c
tools/vcf2turtle/tests/: test_helper.c
tools/virtuoso-config/: virtuoso-config.in
tools/xml2rdf/: Makefile.am
tools/xml2rdf/include/: helper.h  ontology.h  runtime_configuration.h
tools/xml2rdf/src/: main.c  ontology.c  ui.c  xml.c  (+1 more)
web/: Makefile.am  guile.am  logger.scm  run.in  run.sh.in  sg-auth-manager.c.in  sg-auth-manager.in  sg-auth-manager.service.in  sg-auth-manager.xml  sg-web-test.c.in  sg-web.c.in  sg-web.in  sg-web.xml  web-interface.scm
web/auth-manager/: api.scm  config-reader.scm  config.scm  permission-check.scm  proxy.scm  virtuoso.scm
web/ext/: plot_mutations_per_type.R
web/extensions/: Makefile.am
web/extensions/hashing/: Makefile.am
web/extensions/hashing/include/: hashing.h
web/extensions/hashing/src/: hashing.c
web/extensions/pdf_report/: Makefile.am
web/extensions/pdf_report/include/: hpdf_annotation.h  pdf_report.h  pdf_report.h.in
web/extensions/pdf_report/src/: hpdf_annotation.c  hpdf_font_cid.c  hpdf_fontdef_jp.c  hpdf_fontdef_kr.c  hpdf_image_png.c  hpdf_pages.c  hpdf_pdfa.c  pdf_report.c
web/extensions/r_report/: Makefile.am
web/extensions/r_report/include/: r_report.h.in
web/extensions/r_report/src/: r_report.c
web/ldap/: authenticate.scm.in
web/sparql/: driver.scm  lang.scm  md5.scm  parser.scm  stream.scm  util.scm
web/static/: portal.js  prompt.js
web/static/css/: jquery-ui.min.css  main.css
web/static/js/: base32.js  connections.js  exploratory.js  import.js  projects.js  prompt.js  query-editor.js  query-history.js  sessions.js
web/static/js/ace/: ace.js
web/test/: endpoint.scm  sparql-parser.scm
web/www/: config-reader.scm  config.scm  config.scm.in  forms.scm  hashing.scm.in  pages.scm  query-builder.scm  reports.scm.in  requests-api.scm  requests-beacon.scm  requests.scm  util.scm
web/www/components/: forms-table.scm  project-graphs.scm  query-history.scm  rdf-stores.scm  sessions.scm
web/www/db/: api.scm  cache.scm  connections.scm  datasets.scm  exploratory.scm  forms.scm  graphs.scm  orcid.scm  overview.scm  portal.scm  projects.scm  prompt.scm  queries.scm  reports.scm  sessions.scm
web/www/pages/: about.md  automate.scm  collect.scm  connection-failure.scm  connections.scm  create-project.scm  cth.scm  dashboard.scm  datasets.scm  edit-connection.scm  edit-project.scm  error.scm  exploratory.scm  getting-started.md  getting-started.scm  graphs.scm  help.scm  import.scm  login.scm  ontologies.md  overview-table.scm  plottable-query.scm  portal.scm  predicates.scm  project-assigned-graphs.scm  project-dependent-graphs.scm  project-details.scm  project-members.scm  project-queries.scm  project-samples.scm  projects.scm  prompt-session-table.scm  prompt.scm  query-history-mark.scm  query-history.scm  query-response.scm  query.scm  report.scm  samples.scm  structure.scm  (+3 more)
